--- a/Toodler/package.json
+++ b/Toodler/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint --ext .jsx --ext .js src/"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6"
   },
