--- a/Toodler/package.json
+++ b/Toodler/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
