--- a/Toodler/package.json
+++ b/Toodler/package.json
@@ -15,13 +15,15 @@
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "is-url": "^1.2.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-radio-buttons-group": "^3.0.5",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
