--- a/TheContactor/package.json
+++ b/TheContactor/package.json
@@ -15,6 +15,7 @@
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "lodash.isequal": "^4.5.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.6"
