--- a/TheContactor/package.json
+++ b/TheContactor/package.json
@@ -19,7 +19,8 @@
     "lodash.isequal": "^4.5.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-modal": "^13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
