--- a/TheContactor/package.json
+++ b/TheContactor/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
-    "lodash.isequal": "^4.5.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-modal": "^13.0.1",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0"
+    "expo-contacts": "~12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
