--- a/TheContactor/package.json
+++ b/TheContactor/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-contacts": "~12.2.0",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
@@ -21,9 +22,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-modal": "^13.0.1",
     "react-native-web": "~0.19.6",
-    "expo-contacts": "~12.2.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
