--- a/TheContactor/package.json
+++ b/TheContactor/package.json
@@ -22,7 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-get-random-values": "^1.10.0",
+    "react-native-get-random-values": "~1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-web": "~0.19.6",
     "uuid": "^9.0.1"
