--- a/DrCinema/package.json
+++ b/DrCinema/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.6.3",
     "react-redux": "^8.0.2",
     "redux-thunk": "^3.1.0"
   },
