--- a/DrCinema/.gitignore
+++ b/DrCinema/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules/
+*.env
 
 # Expo
 .expo/
@@ -30,7 +31,6 @@ yarn-error.*
 
 # local env files
 .env*.local
-.env
 
 # typescript
 *.tsbuildinfo
